# ipa-hcc

./: .gitignore  .gitlab-ci.yml  .gitlab-idm-ci.yml  DEVELOPMENT.md  EPHEMERAL.md  MANIFEST.in  Makefile  README.md  install.sh  ipa-hcc.spec.rpkg  ipa-hcc.sysusers  ipahcc_auto_enrollment.py  pylintrc  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
contrib/: convert_schema.py  create-rhel-vms.sh
contrib/1minutetip/tests/: tests.yml
contrib/ci-image/: Containerfile.8  Containerfile.9  Containerfile.fedora  Makefile
idm-ci/: README.md  secrets.compose.example  secrets.ephemeral.example  secrets.example
idm-ci/config/: hmsidm-config.yaml
idm-ci/metadata/: hmsidm-dev-ad.yaml  hmsidm-dev.yaml  hmsidm-domains-backend.yaml  hmsidm-ephemeral.yaml  hmsidm-permanent.yaml  hmsidm-rhel92-backend.yaml  hmsidm-rhel92.yaml  hmsidm-rhel93-backend.yaml  hmsidm-rhel93.yaml
idm-ci/playbooks/: fetch-logs.yaml  hmsidm-automount.yaml  hmsidm-check-env.yaml  hmsidm-install-packages.yaml  hmsidm-post-configure.yaml  hmsidm-pre-configure.yaml  hmsidm-rpkg-local.yaml  hmsidm-test.yaml  idm-domains-backend-deploy.yaml  idm-domains-backend-test.yaml  make-permanent.yaml  rhc-configure.yaml  rhc-connect.yaml  ssh-users.yaml
idm-ci/playbooks/templates/: hcc.conf.j2  ipa-hcc-auto-enrollment.j2
install/client/sysconfig/: ipa-hcc-auto-enrollment
install/client/systemd/: 80-ipa-hcc-auto-enrollment.preset
install/mockapi/httpd/: ipa-hcc-mockapi.conf
install/server/ipa/: hcc.conf
install/server/updates/: 85-hcc.update
ipahcc/: hccplatform.py
ipahcc/mockapi/: wsgi.py
ipahcc/registration/: wsgi.py
ipahcc/server/schema/: errors.json  host_conf_response.json  ipadomain_response.json
ipahcc/sign/: __init__.py  _jwk.py  _jwst.py
src/: ipahcc_auto_enrollment.py  ipahcc_client_prepare.py  ipahcc_stage_console.py
src/ipahcc/: _version.py  hccplatform.py
src/ipahcc/client/: auto_enrollment.py
src/ipahcc/mockapi/: domain_token.py  wsgi.py
src/ipahcc/registration/: wsgi.py
src/ipahcc/server/: cli.py  framework.py  hccapi.py  mockapi.py  schema.py  util.py
src/ipahcc/server/schema/: defs.json  ipadomain_get_request.json  ipadomain_register_request.json  ipadomain_register_response.json  ipadomain_update_response.json
src/ipahcc/sign/: __main__.py  _jwk.py  _jwst.py
src/ipaserver/plugins/: hccconfig.py  hccidp.py
stubs/ipaserver/plugins/: hccserverroles.pyi
tests/: conftest.py  test_autoenrollment.py  test_client_prepare.py  test_framework.py  test_hccapi.py  test_ipaserver.py  test_ipaserver_integration.py  test_mockapi.py  test_registration.py  test_sign.py  tests.py
