[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ipahcc"
version = "0.12"
description = "IPA enrollment agent for Red Hat Hybrid Cloud Console"
readme = "README.md"
authors = [
    {name = "Christian Heimes", email = "cheimes@redhat.com"},
]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.6"
# Package versions are limited to get similar package versions as on RHEL.
dependencies = [
    "requests",
    # Fedora dev (ipaclient is taken from global env)
    "cryptography ; python_version >= '3.10'",
    "jsonschema == 4.10; python_version >= '3.10'",
    "jwcrypto == 0.9.1; python_version >= '3.10'",
    # RHEL 9 with Python 3.9
    "cryptography < 38 ; python_version == '3.9'",
    "ipaclient < 4.10.99 ; python_version == '3.9'",
    "jsonschema < 3.3; python_version == '3.9'",
    "jwcrypto == 0.8.0; python_version == '3.9'",
    # RHEL 8 with Python 3.6
    "cryptography < 3.3 ; python_version == '3.6'",
    "ipaclient < 4.9.99 ; python_version == '3.6'",
    "jsonschema < 3.0; python_version == '3.6'",
    "jwcrypto == 0.5.0; python_version == '3.6'",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "ipahcc",
    "ipahcc.mockapi",
    "ipahcc.registration",
    "ipahcc.server",
    "ipahcc.server.schema",
    "ipahcc.sign",
    "ipaserver.install.plugins",
    "ipaserver.plugins",
]
py-modules = [
    "ipahcc_auto_enrollment",
]

[tool.setuptools.package-data]
"ipahcc" = ["py.typed"]
"ipahcc.server" = ["schema/*.json"]

[tool.black]
line-length = 78
target-version = ['py36']
extend-exclude = "api/.*\\.py"

[tool.coverage.run]
branch = true
relative_files = true
parallel = true
source = [
    "ipahcc_auto_enrollment",
    "ipahcc",
    "ipaserver",
    "tests/",
]
omit = [
    "/usr/*",
    "*/ipahcc/sign/__main__.py",
]

[tool.coverage.paths]
source = [
   "src/",
   ".tox/*/lib*/python*/site-packages/",
]
tests = [
   "tests/",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if typing.TYPE_CHECKING",
    "if __name__ == .__main__.",
    "if False:",
]

[tool.mypy]
mypy_path = "src/:stubs/:tests/"
explicit_package_bases = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    'augeas.*',
    'jwcrypto.*',
]
ignore_missing_imports = true

[tool.ruff]
select = [
    "E", "W", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "S", # flake8-bandit
    "TCH", # flake8-type-checking
    "TID", # flake8-tide-imports
    "T10", # flake8-debugger
    "T20", # flake8-print
    "PL" # pylint
]
ignore = [
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "PLR5501", # Consider using `elif`
    "S101", # Use of `assert` detected
    "F811", # Redefinition of unused {name} from line
]
# lowest supported version
target-version = "py37"
extend-exclude = ["api/*.py"]

[tool.ruff.per-file-ignores]
# don't resort auto-generated stub files
"stubs/*" = ["I"]
# allow print in CLI scripts
"src/ipahcc/server/cli.py" = ["T20"]
"src/ipahcc_auto_enrollment.py" = ["T20"]
"src/ipahcc/sign/__main__.py" = ["T20"]

[tool.ruff.isort]
known-first-party = [
    "conftest",
    "ipahcc",
    "ipahcc_auto_enrollment",
    "ipaserver.plugins.hccserverroles",
]
# forced-separate = [
#     "ipaclient", "ipalib", "ipapython", "ipaplatform", "ipaserver",
# ]
