# setup.cfg for backwards compatibility with setuptools on Python 3.6
[metadata]
name = ipahcc
version = 0.12
description = IPA enrollment agent for Red Hat Hybrid Cloud Console
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
license_files = COPYING
author = Christian Heimes
author_email = cheimes@redhat.com
platforms = any

[options]
python_requires = >=3.6
setup_requires = setuptools
install_requires =
    requests
    dbus-python
    pygobject
    # Fedora dev (ipaclient is taken from global env)
    jsonschema == 4.10; python_version >= '3.10'
    jwcrypto == 0.9.1; python_version >= '3.10'
    # RHEL 9 with Python 3.9
    ipaclient < 4.10.99 ; python_version == '3.9'
    jsonschema < 3.3; python_version == '3.9'
    jwcrypto == 0.8.0; python_version == '3.9'
    # RHEL 8 with Python 3.6
    ipaclient < 4.9.99 ; python_version == '3.6'
    jsonschema < 3.0; python_version == '3.6'
    jwcrypto == 0.5.0; python_version == '3.6'
package_dir=
    =src
packages=
    ipahcc
    ipahcc.mockapi
    ipahcc.registration
    ipahcc.server
    ipahcc.sign
    ipaserver.install.plugins
    ipaserver.plugins
py_modules =
    ipahcc_auto_enrollment
include_package_data = True

[options.package_data]
ipahcc =
    py.typed
ipahcc.server =
    schema/*.json

[bdist_wheel]
universal = 1
